--- a/index.html
+++ b/index.html
@@ -1,33 +1,13 @@
-
-<!doctype html>
 <html>
-<head>
-    <title>Index</title>
-
-    <meta charset="utf-8" />
-    <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
-    
-</head>
-
 <body>
-<h1>My First Website</h1>
-<img src="" alt="picture of me and my friends:)">
-	<p>
-	<h3>Things we like to do</h3>
-	<ul>
-	<li>rock climbing</li>
-	<li>watching tv</li>
-	<li>learning new things</li>
-	<li>hanginng out with each other</li>
-	</ul>
-	</p>
-	<p>
-	click <a href="gallery.html"><strong>here</strong></a> to go to our gallery<br>
-	<a href="ContactInfo.html"><strong><em>contact us</strong></em></a>
-	</p>
+<h1>fdjdfjfjfgj</h1>
+<style>
 	
-	
+	body {
+	color: red;
+	}
+	</style>
 </body>
-</html>
 
+</html>
 
